<resources>
    <string name="app_name">KonstTest2</string>
    <string name="logo">Лого</string>
    <string name="light_theme">Светлая тема</string>
    <string name="dark_theme">Темная тема</string>
    <string name="standard_density">Стандартный макет</string>
    <string name="high_density">Плотный макет</string>
    <string name="standard_density_explanation">Портретная: 4 иконки в ряд Ландшафтная: 6 иконок в ряд</string>
    <string name="high_density_explanation">Портретная: 5 иконки в ряд Ландшафтная: 7 иконок в ряд</string>
    <string name="density">Плотность</string>
    <string name="settings">Настройки</string>
    <string name="net">Сетка</string>
    <string name="list">Список</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="name">Николай Константинов</string>
    <string name="sort">Сортировка</string>
    <string name="show_welcome_after">Показывать Welcome-page при следующем запуске</string>
    <string name="no_data">Нет данных</string>
    <string name="mail">Email: konst007@tut.by</string>
    <string name="fb">Facebook: https://www.facebook.com/profile.php?id=100010369265622</string>
    <string name="git">GitHub: theManWihoutQualities</string>
    <string name="location">Координаты: 53°55′ с. ш. 27°33′ в. д.</string>
    <string name="description_second">...Например, можно просматривать статистику запуска приложений, просматривать профиль</string>
    <string name="welcome">Добро пожаловать!</string>
    <string name="phone">Телефон: +375291939666</string>
    <string name="description">Это лаунчер. Для запуска приложений и других интересных вещей.</string>
    <string name="theme">Тема</string>
    <string name="vk">Vkontakte: https://m.vk.com/id15841685</string>
    <string name="desktop">Рабочий стол</string>
    <string name="delete">Удалить</string>
    <string name="add">Добавить</string>
    <string name="frequency">Частота</string>
    <string name="info">Инфо</string>
    <string name="wallpaper_source">Источник обоев</string>
    <string name="change_wallpaper_now">Изменить обои сейчас</string>
    <string name="wallpaper_periodic">Периодичность смены обоев</string>
    <string name="add_link">Добавить ссылку</string>
    <string name="add_phone">Добавить контакт</string>
    <string name="info_permission_description">App info permission. We do not want everyone use it</string>
    <string name="list_permission_description">List apps permission. We do not want everyone see all apps</string>
    <string name="change_app_info_permission_description">Change app info permission. We do not want everyone change app info</string>
    <string name="get_profile_permission_description">Get profile permission. We do not want everyone see profile</string>
    <string name="simple_push">Простой пуш</string>
    <string name="pretty_push">Покрасивее</string>
</resources>
