<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <ListPreference
        android:key="theme"
        android:entries="@array/theme_entries"
        android:entryValues="@array/theme_entryValues"
        android:title="@string/theme"
        android:defaultValue="light"/>
    <ListPreference
        android:key="density"
        android:entries="@array/density_entries"
        android:entryValues="@array/density_entryValues"
        android:title="@string/density"
        android:defaultValue="standard"/>
    <ListPreference
        android:key="sort"
        android:entries="@array/sort_entries"
        android:entryValues="@array/sort_entryValues"
        android:title="@string/sort"
        android:defaultValue="noSort"/>/>
    <CheckBoxPreference
        android:key="showWelcomePage"
        android:title="@string/show_welcome_after" />
    <ListPreference
        android:key="background_site"
        android:entries="@array/background_site_entries"
        android:entryValues="@array/background_site_entryValues"
        android:title="@string/wallpaper_source"
        android:defaultValue="https://loremflickr.com/"/>
    <CheckBoxPreference
        android:key="changeWallpaperNow"
        android:title="@string/change_wallpaper_now" />
    <ListPreference
        android:key="background_periodic"
        android:entries="@array/background_periodic_entries"
        android:entryValues="@array/background_periodic_entryValues"
        android:title="@string/wallpaper_periodic"
        android:defaultValue="per_15_minutes"/>
</PreferenceScreen>