<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom|center"
        android:orientation="vertical"
        android:padding="18dp"
        android:id="@+id/linear_layout">
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/radiobutton_background"
                    android:layout_margin="5dp"
                    android:text="@string/standard_density"
                    android:id="@+id/standard_density"
                    android:onClick="clickRadioButtonDensity"/>
                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/radiobutton_background"
                    android:layout_margin="5dp"
                    android:text="@string/high_density"
                    android:id="@+id/high_density"
                    android:onClick="clickRadioButtonDensity"/>
            </RadioGroup>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center"
                android:background="#00000000">
                <TextView
                    android:id="@+id/standard_density_explain"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="8"
                    android:gravity="center_vertical"
                    android:padding="18dp"
                    android:text="@string/standard_density_explanation" />
                <TextView
                    android:id="@+id/high_density_explain"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="5"
                    android:gravity="center_vertical"
                    android:padding="18dp"
                    android:text="@string/high_density_explanation" />
            </LinearLayout>
        </FrameLayout>
    </LinearLayout>
</ScrollView>